# lce-test

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  mem0-2019-11-13-19-07-29.txt
benchmark/: .#bench_time.cpp  CMakeLists.txt  bench_memory.cpp  bench_predecessor.cpp  bench_sparse_ss.cpp  bench_time.cpp  bench_timeCORRECT.cpp  bench_timeX.cpp  build_lce_ranges.hpp  genqueries.cpp  io.hpp  sdsl_cst_benchmark.cpp  timer.hpp
cmake/: FindSDSL.cmake  Finddivsufsort.cmake  Finddivsufsort64.cmake
lce-test/: CMakeLists.txt  lce_naive.hpp  lce_naive_ultra.hpp  lce_prezza.hpp  lce_prezza_before_fp_fix.hpp  lce_prezza_mersenne.hpp  lce_sdsl_cst.hpp  lce_semi_synchronizing_sets.hpp  lce_semi_synchronizing_sets_par.hpp  lce_synchronizing_sets.hpp
lce-test/graph/: UNI_lce.test  statsX
lce-test/malloc_count/: malloc_count.h
lce-test/src/: testTime.cpp
lce-test/src/structs/: lceInterface.hpp  lceNaive.hpp  lcePrezza.hpp  lcePrezzaAdv.hpp  lceUltraNaive.hpp  util.hpp
lce-test/test/: time.txt-13-04-2019 17-44-27
lce-test/test/dna/: i0  i10  i3  i4  i5  i6  i7  i8  i9  iH
lce-test/util/: lce_interface.hpp  util.hpp
lce-test/util/prezza_mersenne/: bitv.hpp  temprk_lce_bin.hpp
lce-test/util/successor/: binsearch.hpp  binsearch_cache.hpp  binsearch_std.hpp  index.hpp  index_par.hpp  j_index.hpp  pgm_index.hpp  rank.hpp  result.hpp
lce-test/util/successor/helpers/: bit_rank.hpp  bit_select.hpp  bit_vector.hpp  int_vector.hpp  rank_select_util.hpp  util.hpp
lce-test/util/synchronizing_sets/: Basic_rmq.h  bit_vector.hpp  bit_vector_rank.hpp  lce-rmq.hpp  ring_buffer.hpp  rmq.hpp  string_sorting.hpp
lce-test/util_ssss_par/: indexed_string.hpp  lce-rmq.hpp  par_rmq_n.hpp  par_rmq_nlgn.hpp  ring_buffer.hpp  rk_prime.hpp  sss_checker.hpp  ssss_par.hpp  string_sort_helper.hpp  string_sorting_seq.hpp
lce-test/util_ssss_par/bingmann-sample-sort/: .gitignore  CMakeLists.txt
lce-test/util_ssss_par/bingmann-sample-sort/src/: CMakeLists.txt
lce-test/util_ssss_par/bingmann-sample-sort/src/parallel/: bingmann-parallel_sample_sort.cpp  bingmann-parallel_sample_sort.hpp
lce-test/util_ssss_par/bingmann-sample-sort/src/sequential/: bingmann-lcp_inssort.hpp  bingmann-radix_sort.hpp  bingmann-sample_sort.cpp  bingmann-sample_sort.hpp  bingmann-sample_sortBS.cpp  bingmann-sample_sortBSC.cpp  bingmann-sample_sortBSC.hpp  bingmann-sample_sortBT.cpp  bingmann-sample_sortBTC.hpp  bingmann-sample_sortBTCE.hpp  bingmann-sample_sortBTCT.hpp  bingmann-sample_sortRBTCE.cpp  bingmann-sample_sort_tree_builder.hpp  inssort.hpp
lce-test/util_ssss_par/bingmann-sample-sort/src/tools/: globals.cpp  globals.hpp  jobqueue.hpp  stringptr.hpp  stringset.hpp  stringtools.hpp
lce-test/util_ssss_par/bingmann-sample-sort/tests/: CMakeLists.txt  test-bingmann-generic.cpp
res/: ecoli.fa  sss_dna (created by FP).50MB  sss_dna (created correctly).50MB  sss_ecoli.fa
res/lceDna/: i0  i1  i10  i11  i12  i13  i14  i15  i16  i2  i3  i4  i5  i6  i7  i8
res/lceDnaA/: i10  i12  i14  i15  i3  i4  i9  iH
res/lce_dna/: i0  i13  i16  i17  i18  i19  i2  i7  iH
res/lce_dna.50MB/: i0  i1  i10  i11  i12  i13  i14  i2  i3  i4  i5  i6  i7  i8  i9
res/lce_ecoli.fa/: i0  i1  i10  i11  i2  i3  i4  i5  i6  i7  i8  i9
res/lce_english/: i0  i1  i10  i11  i12  i13  i14  i15  i16  i17  i18  i19  i2  i3  i4  i5  i6  i7  i8  i9  iH
src/: bench_memory.cpp  bench_time.cpp  build_lce_ranges.hpp  testCorrectness.cpp  testSss.cpp  testSyncSets.cpp  testTime (Kopie).cpp  testTime.cpp  test_correctness.cpp  test_time.cpp
src/malloc_count/: Makefile
src/structs/: _lce_prezza_mersenne.hpp  lceInterface.hpp  lceNaive.hpp  lceNaiveBlock.hpp  (+16 more)
testResults/: correctness.test  time-2019-05-06-09-26-45.txt  time-2019-05-06-09-42-48.txt  time-2019-05-06-12-58-23.txt  time-2019-05-06-13-01-40.txt  time-2019-05-06-13-16-01.txt  time-2019-05-06-13-19-37.txt  time-2019-05-06-13-21-22.txt  time-2019-05-06-13-24-11.txt  time-2019-05-06-13-49-01.txt  time-2019-05-06-13-53-56.txt  time-2019-05-06-13-57-38.txt  time-2019-05-06-15-08-18.txt  time-2019-05-09-08-44-29.txt  time-2019-05-09-10-56-19.txt  time-2019-05-09-11-34-11.txt  time-2019-05-09-11-36-51.txt  time-2019-05-09-11-40-34.txt  time-2019-05-09-11-59-21.txt  time-2019-05-09-12-02-24.txt  time-2019-05-09-12-08-41.txt  time-2019-05-09-12-19-29.txt  time-2019-05-09-12-27-51.txt  time-2019-05-09-14-55-06.txt  time-2019-05-09-14-56-03.txt  time-2019-05-09-14-56-44.txt  time-2019-05-09-14-57-09.txt  time-2019-05-09-14-58-11.txt  time-2019-05-09-14-58-25.txt  time-2019-05-09-15-08-49.txt  time-2019-05-09-15-10-28.txt  time.txt-2019-05-02-10-38-33  time.txt-2019-05-02-10-48-45  time.txt-2019-05-02-11-07-51  time.txt-2019-05-02-13-40-00  time.txt-2019-05-02-14-35-26  time.txt-2019-05-02-14-36-53  time.txt-2019-05-02-14-39-02  time.txt-2019-05-02-14-50-03  time.txt-2019-05-02-15-08-46  (+15 more)
test_results/: mem-2019-11-06-22-16-07.txt  mem-2019-11-06-22-19-05.txt  mem-2019-11-06-22-22-00.txt  mem-2019-11-06-22-57-45.txt  mem-2019-11-27-21-03-30.txt  mem-2019-11-27-21-09-20.txt  mem-2019-11-27-22-00-20.txt  mem-2019-11-27-22-03-29.txt  mem0-2019-11-06-22-23-32.txt  time-2019-10-30-21-25-05.txt  time-2019-11-06-21-29-51.txt  time-2019-11-06-21-31-12.txt  time-2019-11-06-21-56-08.txt  time-2019-11-13-17-41-10.txt  time-2019-11-13-17-48-15.txt  time-2019-11-13-17-52-31.txt  time-2019-11-13-17-55-12.txt  time-2019-11-13-18-06-03.txt  time-2019-11-13-18-13-37.txt  time-2019-11-13-18-30-08.txt  time-2019-11-13-18-33-05.txt  time-2019-11-13-19-07-27.txt  time-2019-11-13-19-33-07.txt  time-2019-11-13-20-05-11.txt  time-2019-11-13-20-17-35.txt  time-2019-11-13-20-22-17.txt  time-2019-11-13-22-02-24.txt  time-2019-11-13-22-03-19.txt  time-2019-11-13-22-05-20.txt  time-2019-11-13-22-08-21.txt  time-2019-11-13-22-21-46.txt  time-2019-11-13-22-23-31.txt  time-2019-11-13-22-24-22.txt  time-2019-11-13-22-25-29.txt  time-2019-11-13-22-26-01.txt  time-2019-11-13-22-26-45.txt  time-2019-11-13-22-28-35.txt  time-2019-11-13-22-29-19.txt  time-2019-11-13-22-30-47.txt  time-2019-11-13-22-32-06.txt  (+25 more)
(+20 files in other folders)
